[gd_scene load_steps=21 format=3 uid="uid://jmtyntu3kstk"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_lbv4i"]
[ext_resource type="Texture2D" uid="uid://dksiou14pub57" path="res://art/symbols/bar_grey.png" id="2_n3sl8"]
[ext_resource type="Texture2D" uid="uid://cmx6qiobg4klx" path="res://art/symbols/symbol_base.png" id="3_caf3n"]
[ext_resource type="Texture2D" uid="uid://ce1henl8ldngf" path="res://art/symbols/bar_red.png" id="3_gmy8h"]
[ext_resource type="Texture2D" uid="uid://drlfjh28pbv3u" path="res://art/symbols/symbol_plus.png" id="4_2sxvn"]
[ext_resource type="Texture2D" uid="uid://77hn1fjpswnk" path="res://art/symbols/bar_grey_wide.png" id="4_fsupa"]
[ext_resource type="Texture2D" uid="uid://bklix2mckyjet" path="res://art/symbols/bar_blue.png" id="4_hb1qq"]
[ext_resource type="Texture2D" uid="uid://mco2kwxpshmh" path="res://art/symbols/symbol_gun.png" id="4_oyn34"]
[ext_resource type="Texture2D" uid="uid://d18rteywmtapf" path="res://art/symbols/bullet_back.png" id="5_p8e2r"]
[ext_resource type="Texture2D" uid="uid://b643bohvhdgrw" path="res://art/symbols/cooldown_gun.png" id="6_oi1n6"]
[ext_resource type="Texture2D" uid="uid://u23s30387dnl" path="res://art/symbols/symbol_sword.png" id="6_skhqd"]
[ext_resource type="Texture2D" uid="uid://qji0n6l01xhd" path="res://art/symbols/cooldown_sword.png" id="7_3jspi"]
[ext_resource type="Texture2D" uid="uid://dueq3uh2d2cmh" path="res://art/symbols/symbol_dash.png" id="7_vcsax"]
[ext_resource type="Texture2D" uid="uid://csg2bdwpt84wt" path="res://art/symbols/cooldown_dash.png" id="8_e6pu8"]
[ext_resource type="Texture2D" uid="uid://bli8yd8vq1ipp" path="res://art/symbols/cooldown_gun_progress.png" id="8_q2dok"]
[ext_resource type="Texture2D" uid="uid://ctafe4bmkf3vw" path="res://art/symbols/cooldown_sword_progress.png" id="10_facjh"]
[ext_resource type="Texture2D" uid="uid://dpjui7klb4cnc" path="res://art/symbols/cooldown_dash_progress.png" id="12_fbavr"]

[sub_resource type="LabelSettings" id="LabelSettings_dlg0k"]
font_size = 25
outline_size = 10
outline_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wwage"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_3dts4"]
font_size = 22

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_lbv4i")

[node name="gameplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="health_bar" type="TextureProgressBar" parent="gameplay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_right = 0.04
offset_left = 14.4
offset_top = 75.0
offset_right = 663.4
offset_bottom = 129.0
value = 10.0
nine_patch_stretch = true
texture_under = ExtResource("2_n3sl8")
texture_progress = ExtResource("3_gmy8h")

[node name="expirience_bar" type="TextureProgressBar" parent="gameplay"]
layout_mode = 0
offset_left = 18.0
offset_top = 7.0
offset_right = 1248.0
offset_bottom = 67.0
nine_patch_stretch = true
texture_under = ExtResource("4_fsupa")
texture_progress = ExtResource("4_hb1qq")

[node name="ammo_container" type="HBoxContainer" parent="gameplay"]
layout_mode = 0
offset_left = 675.0
offset_top = 68.0
offset_right = 1268.0
offset_bottom = 137.0
metadata/_edit_group_ = true

[node name="ammo_1" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_2" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_3" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_4" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_5" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_6" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_7" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_8" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_9" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_10" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_11" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_12" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_13" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_14" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="ammo_15" type="TextureRect" parent="gameplay/ammo_container"]
layout_mode = 2
texture = ExtResource("5_p8e2r")
expand_mode = 3

[node name="gun_cooldown" type="TextureProgressBar" parent="gameplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 383.0
offset_top = 546.0
offset_right = 498.0
offset_bottom = 655.0
grow_horizontal = 2
grow_vertical = 0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("6_oi1n6")
texture_progress = ExtResource("8_q2dok")

[node name="sword_cooldown" type="TextureProgressBar" parent="gameplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 563.0
offset_top = 548.0
offset_right = 673.0
offset_bottom = 654.0
grow_horizontal = 2
grow_vertical = 0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("7_3jspi")
texture_progress = ExtResource("10_facjh")

[node name="dash_cooldown" type="TextureProgressBar" parent="gameplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 730.0
offset_top = 548.0
offset_right = 840.0
offset_bottom = 654.0
grow_horizontal = 2
grow_vertical = 0
fill_mode = 5
nine_patch_stretch = true
texture_under = ExtResource("8_e6pu8")
texture_progress = ExtResource("12_fbavr")

[node name="level_notification" type="Label" parent="gameplay"]
layout_mode = 0
offset_left = 316.0
offset_top = 535.0
offset_right = 982.0
offset_bottom = 589.0
text = "You have unspent levels. Press 'E' or 'Q' to upgrade."
label_settings = SubResource("LabelSettings_dlg0k")

[node name="stats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="stats"]
layout_mode = 0
offset_right = 1287.0
offset_bottom = 722.0
color = Color(0.160784, 0.160784, 0.160784, 0.890196)

[node name="base" type="Control" parent="stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="base_label" type="Label" parent="stats/base"]
layout_mode = 0
offset_left = 127.0
offset_top = 38.0
offset_right = 277.0
offset_bottom = 93.0
text = "Base
"
label_settings = SubResource("LabelSettings_wwage")

[node name="base_symbol" type="TextureRect" parent="stats/base"]
layout_mode = 0
offset_left = 26.0
offset_top = 91.0
offset_right = 190.0
offset_bottom = 279.0
texture = ExtResource("3_caf3n")
expand_mode = 1

[node name="base_stats_label" type="Label" parent="stats/base"]
layout_mode = 0
offset_left = 323.0
offset_top = 114.0
offset_right = 446.0
offset_bottom = 213.0
text = "Max Health

Speed"
label_settings = SubResource("LabelSettings_3dts4")

[node name="base_stats" type="Label" parent="stats/base"]
layout_mode = 0
offset_left = 448.0
offset_top = 114.0
offset_right = 563.0
offset_bottom = 213.0
text = "10

8"
label_settings = SubResource("LabelSettings_3dts4")
horizontal_alignment = 2

[node name="base_stats_upgrade" type="Label" parent="stats/base" groups=["upgrade_increment_label"]]
layout_mode = 0
offset_left = 596.0
offset_top = 114.0
offset_right = 711.0
offset_bottom = 213.0
text = "0

0"
label_settings = SubResource("LabelSettings_3dts4")

[node name="upgrade_health" type="Button" parent="stats/base" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 239.0
offset_top = 111.0
offset_right = 279.0
offset_bottom = 150.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_speed" type="Button" parent="stats/base" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 179.0
offset_right = 281.0
offset_bottom = 219.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="gun" type="Control" parent="stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="gun_label" type="Label" parent="stats/gun"]
layout_mode = 0
offset_left = 130.0
offset_top = 312.0
offset_right = 280.0
offset_bottom = 367.0
text = "Gun"
label_settings = SubResource("LabelSettings_wwage")

[node name="gun_symbol" type="TextureRect" parent="stats/gun"]
layout_mode = 0
offset_left = 13.0
offset_top = 558.0
offset_right = 250.0
offset_bottom = 700.0
rotation = -0.760964
texture = ExtResource("4_oyn34")
expand_mode = 1

[node name="gun_stats_label" type="Label" parent="stats/gun"]
layout_mode = 0
offset_left = 325.0
offset_top = 363.0
offset_right = 482.0
offset_bottom = 666.0
text = "Max Ammo

Cooldown

Bullet Speed

Bullet Size

Bullet Damage"
label_settings = SubResource("LabelSettings_3dts4")

[node name="gun_stats" type="Label" parent="stats/gun"]
layout_mode = 0
offset_left = 415.0
offset_top = 363.0
offset_right = 562.0
offset_bottom = 666.0
text = "0

0

0

0

0"
label_settings = SubResource("LabelSettings_3dts4")
horizontal_alignment = 2

[node name="gun_stats_upgrade" type="Label" parent="stats/gun" groups=["upgrade_increment_label"]]
layout_mode = 0
offset_left = 597.0
offset_top = 363.0
offset_right = 744.0
offset_bottom = 666.0
text = "0

0

0

0

0"
label_settings = SubResource("LabelSettings_3dts4")

[node name="upgrade_ammo" type="Button" parent="stats/gun" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 360.0
offset_right = 281.0
offset_bottom = 400.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_gun_cooldown" type="Button" parent="stats/gun" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 430.0
offset_right = 281.0
offset_bottom = 470.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_bullet_speed" type="Button" parent="stats/gun" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 498.0
offset_right = 281.0
offset_bottom = 538.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_bullet_size" type="Button" parent="stats/gun" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 564.0
offset_right = 283.0
offset_bottom = 606.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_bullet_damage" type="Button" parent="stats/gun" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 240.0
offset_top = 633.0
offset_right = 283.0
offset_bottom = 675.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="sword" type="Control" parent="stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="sword_label" type="Label" parent="stats/sword"]
layout_mode = 0
offset_left = 795.0
offset_top = 246.0
offset_right = 945.0
offset_bottom = 301.0
text = "Sword"
label_settings = SubResource("LabelSettings_wwage")

[node name="sword_symbol" type="TextureRect" parent="stats/sword"]
layout_mode = 0
offset_left = 668.0
offset_top = 315.0
offset_right = 890.0
offset_bottom = 472.0
texture = ExtResource("6_skhqd")
expand_mode = 1

[node name="sword_stats_label" type="Label" parent="stats/sword"]
layout_mode = 0
offset_left = 1005.0
offset_top = 302.0
offset_right = 1131.0
offset_bottom = 470.0
text = "Cooldown

Damage

Size"
label_settings = SubResource("LabelSettings_3dts4")

[node name="sword_stats" type="Label" parent="stats/sword"]
layout_mode = 0
offset_left = 1034.0
offset_top = 302.0
offset_right = 1160.0
offset_bottom = 470.0
text = "0

0

0"
label_settings = SubResource("LabelSettings_3dts4")
horizontal_alignment = 2

[node name="sword_stats_upgrade" type="Label" parent="stats/sword" groups=["upgrade_increment_label"]]
layout_mode = 0
offset_left = 1198.0
offset_top = 302.0
offset_right = 1324.0
offset_bottom = 470.0
text = "0

0

0"
label_settings = SubResource("LabelSettings_3dts4")

[node name="upgrade_sword_cooldown" type="Button" parent="stats/sword" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 936.0
offset_top = 300.0
offset_right = 974.0
offset_bottom = 338.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_sword_damage" type="Button" parent="stats/sword" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 936.0
offset_top = 368.0
offset_right = 975.0
offset_bottom = 406.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_sword_size" type="Button" parent="stats/sword" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 936.0
offset_top = 436.0
offset_right = 975.0
offset_bottom = 474.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="dash" type="Control" parent="stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="dash_label" type="Label" parent="stats/dash"]
layout_mode = 0
offset_left = 801.0
offset_top = 508.0
offset_right = 974.0
offset_bottom = 563.0
text = "Dash
"
label_settings = SubResource("LabelSettings_wwage")

[node name="dash_symbol" type="TextureRect" parent="stats/dash"]
layout_mode = 0
offset_left = 657.0
offset_top = 556.0
offset_right = 922.0
offset_bottom = 706.0
texture = ExtResource("7_vcsax")
expand_mode = 1

[node name="dash_stats_label" type="Label" parent="stats/dash"]
layout_mode = 0
offset_left = 1004.0
offset_top = 572.0
offset_right = 1130.0
offset_bottom = 740.0
text = "Cooldown

Power"
label_settings = SubResource("LabelSettings_3dts4")

[node name="dash_stats" type="Label" parent="stats/dash"]
layout_mode = 0
offset_left = 1103.0
offset_top = 572.0
offset_right = 1162.0
offset_bottom = 740.0
text = "0

0"
label_settings = SubResource("LabelSettings_3dts4")
horizontal_alignment = 2

[node name="dash_stats_upgrade" type="Label" parent="stats/dash" groups=["upgrade_increment_label"]]
layout_mode = 0
offset_left = 1201.0
offset_top = 572.0
offset_right = 1260.0
offset_bottom = 740.0
text = "0

0"
label_settings = SubResource("LabelSettings_3dts4")

[node name="upgrade_dash_cooldown" type="Button" parent="stats/dash" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 937.0
offset_top = 570.0
offset_right = 978.0
offset_bottom = 610.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="upgrade_dash_power" type="Button" parent="stats/dash" groups=["upgrade_button"]]
layout_mode = 0
offset_left = 937.0
offset_top = 638.0
offset_right = 979.0
offset_bottom = 679.0
icon = ExtResource("4_2sxvn")
expand_icon = true

[node name="level_points" type="Label" parent="stats"]
layout_mode = 0
offset_left = 791.0
offset_top = 130.0
offset_right = 1093.0
offset_bottom = 223.0
text = "Current Exp: 0/0
Unspent Levels: 0"
label_settings = SubResource("LabelSettings_3dts4")

[connection signal="pressed" from="stats/base/upgrade_health" to="." method="upgrade_button" binds= ["health"]]
[connection signal="pressed" from="stats/base/upgrade_speed" to="." method="upgrade_button" binds= ["speed"]]
[connection signal="pressed" from="stats/gun/upgrade_ammo" to="." method="upgrade_button" binds= ["ammo"]]
[connection signal="pressed" from="stats/gun/upgrade_gun_cooldown" to="." method="upgrade_button" binds= ["gun_cooldown"]]
[connection signal="pressed" from="stats/gun/upgrade_bullet_speed" to="." method="upgrade_button" binds= ["bullet_speed"]]
[connection signal="pressed" from="stats/gun/upgrade_bullet_size" to="." method="upgrade_button" binds= ["bullet_size"]]
[connection signal="pressed" from="stats/gun/upgrade_bullet_damage" to="." method="upgrade_button" binds= ["bullet_damage"]]
[connection signal="pressed" from="stats/sword/upgrade_sword_cooldown" to="." method="upgrade_button" binds= ["sword_cooldown"]]
[connection signal="pressed" from="stats/sword/upgrade_sword_damage" to="." method="upgrade_button" binds= ["sword_damage"]]
[connection signal="pressed" from="stats/sword/upgrade_sword_size" to="." method="upgrade_button" binds= ["sword_size"]]
[connection signal="pressed" from="stats/dash/upgrade_dash_cooldown" to="." method="upgrade_button" binds= ["dash_cooldown"]]
[connection signal="pressed" from="stats/dash/upgrade_dash_power" to="." method="upgrade_button" binds= ["dash_power"]]
